--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "next": ">=11.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-typing-effect": "^2.0.5"
