--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
-    "autoprefixer": "^10.3.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.7"
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
