--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": ">=11.1.3",
+    "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-typing-effect": "^2.0.5"
