--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-2021",
+  "name": "ben-weston-personal-site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs": "^4.0.1",
     "next": ">=11.1.3",
     "next-themes": "^0.2.0",
     "react": "17.0.2",
