--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.2.4",
+    "next": "^13.4.19",
     "next-themes": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
@@ -23,7 +23,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1",
+    "eslint-config-next": "^13.4.19",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
